--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 /_private/
 /.settings
+/.gradle/
+/build/
 
 /DisplayObjects/mobile/*
 !/DisplayObjects/mobile/assets
 
 /oas2/
 /oas3/
-
-/.gradle
