update template version from 7.9.0.3 to 7.9.0.6

--- a/ionicTpl/angular.json
+++ b/ionicTpl/angular.json
@@ -31,6 +31,16 @@
                 "output": "assets"
               },
               {
+                "glob": "**/*",
+                "input": "../../Flashupdate",
+                "output": "/"
+              },
+              {
+                "glob": "cordova.js",
+                "input": "src",
+                "output": "/"
+              },
+              {
                 "glob": "env.json",
                 "input": "src",
                 "output": "/"
@@ -44,11 +54,6 @@
                 "glob": "animate.min.css",
                 "input": "node_modules/animate.css",
                 "output": "assets/css"
-              },
-              {
-                "glob": "**/*",
-                "input": "node_modules/ngx-monaco-editor/assets/monaco",
-                "output": "assets/monaco"
               }
             ],
             "styles": [
